<resources>
    <string name="app_name">STC Online</string>
    <string name="hello">hello</string>
    <string name="shopMore"><![CDATA[Shop More >]]></string>
    <string name="flashSale">Flash Sale</string>
    <string name="_11">11</string>
    <string name="_2_in_stock">2 in Stock</string>
    <string name="just_for_you">Just For You</string>
    <string name="rs">Rs.</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="message">Messages</string>
    <string name="cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recharge">Recharge</string>
    <string name="gas_depo">Gas Depo</string>
    <string name="special_offer">Special Offer</string>
    <string name="vegetable_store">Vegetable Store</string>
    <string name="carts">Carts</string>
    <string name="username">Username:</string>
    <string name="login">LOG IN</string>
    <string name="phoneno_or_email">phoneno or email</string>
    <string name="stc_online">STC Online</string>
    <string name="log_in">LOG IN</string>
    <string name="phone_no_or_email">Phone no or Email</string>
    <string name="password">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up_if_you_dont_have_an_account">Sign Up! if you dont have an account!!</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
