<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".authentication.LoginActivity">

        <TextView
            android:id="@+id/stc_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:text="@string/stc_online"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/login_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,SpUsage" />

        <RelativeLayout
            android:id="@+id/login_form"
            android:layout_width="324dp"
            android:layout_height="376dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/username_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/phone_no_or_email"
                android:padding="5dp"
                android:textSize="18sp"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/password_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_edittext"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/log_in_button"
                android:textAllCaps="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/sign_up_text"
                android:layout_below="@id/password_edittext"
                android:layout_alignStart="@+id/password_edittext"
                android:layout_alignLeft="@+id/password_edittext"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="29dp"
                android:layout_toStartOf="@+id/login_button"
                android:layout_toLeftOf="@+id/login_button"
                android:text="@string/forgot_password"
                android:textColor="@color/blue" />

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="49dp"
                android:gravity="center"
                android:text="@string/sign_up_if_you_dont_have_an_account"
                android:textColor="@color/blue" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>