<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="8dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/flash_sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flashSale"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/hour"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/timer_box"
            android:gravity="center_horizontal"
            android:hint="@string/_11"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/minute"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/timer_box"
            android:gravity="center_horizontal"
            android:hint="@string/_11"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/second"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/timer_box"
            android:gravity="center_horizontal"
            android:hint="@string/_11"
            android:textAlignment="center"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/shop_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/shopMore"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textSize="15sp"
        tools:ignore="AllCaps" />
</LinearLayout>
