<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".authentication.SignupActivity">

        <TextView
            android:id="@+id/stc_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/stc_online"
            android:textSize="40dp"
            app:layout_constraintBottom_toTopOf="@+id/sign_up_form"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints,SpUsage" />

        <RelativeLayout
            android:id="@+id/sign_up_form"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:background="@drawable/login_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/full_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/full_name"
                android:padding="5dp"
                android:textSize="18sp"
                android:inputType="text" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/full_name_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_number"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/password_sign_up_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_sign_up_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/password"
                android:minLines="6"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="Autofill,RtlSymmetry"
                />

            <TextView
                android:id="@+id/confirm_password_sign_up_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password_edittext"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="20dp"
                android:text="@string/confirm_password"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/confirm_password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/confirm_password_sign_up_textView"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/username_field"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry"
                />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/confirm_password_edittext"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="18dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false" />

            <TextView
                android:id="@+id/sign_up_text"
                android:layout_width="323dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_up_button"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20sp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="Log in! If you already have an account!!"
                android:textColor="@color/blue" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>