<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroudColor"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroudColor"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/recharge_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_cropped"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/recharge"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFund"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/stc_logo"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="STC Online"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFunds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/logo_special"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/special_offer"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFundss"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/load_money"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Load Money"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:background="@color/backgroudColor"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/loadFunda"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/logo_cylinder"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/gas_depo"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFundb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/location_logo"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Mall Location"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFundc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/vegetable_store"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/vegetable_store"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/loadFundh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardCornerRadius="23dp">

                    <ImageView
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_gravity="center"
                        android:background="@drawable/epay_logo"
                        android:foregroundGravity="center_horizontal"
                        android:scaleType="centerCrop"
                        tools:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Payment System"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="10sp" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
